# Banstop

./: .gitignore  README.md  main.py  pyproject.toml
core/: __init__.py  checks.py  config.py  console.py  monitor.py  network.py  scanner.py  shaping.py  spoof.py
